--- a/LoginPage.html
+++ b/LoginPage.html
@@ -43,6 +43,7 @@
                     <br>
                     <input  class="btn-grad"type="button" value="login">
                 </form>
+                <p>Click here if you're not the member <a href=/signuppage.html> yet!</a></p>
                 </div>
         </div>
     </div>
